python-restauth (0.6.1-1) unstable; urgency=low

  * Version bump from upstream
  * Move repository of Debian package to different repository.
  * Migrate to using pristine-tar.
  * Require RestAuth 0.6.1 or greater.
 
 -- Mathias Ertl <mati@restauth.net>  Sun, 07 Apr 2013 16:20:31 +0200

python-restauth (0.5.1-3-g236f119-1) unstable; urgency=low

  * Version bump from upstream
 
 -- Mathias Ertl <mati@restauth.net>  Sat, 15 Sep 2012 10:37:38 +0200

python-restauth (0.5.1-3-g236f119-1) unstable; urgency=low
  
  * move to python-sphinx
  * password is now an optional parameter when creating a user
  * setting an empty password disables the user
 
 -- Mathias Ertl <mati@restauth.net>  Sat, 17 Mar 2012 20:47:38 +0200

python-restauth (0.0-93-gf37ba95-1) maverick; urgency=low

  * Initial version

 -- Mathias Ertl <mati@restauth.net>  Thu, 30 Sep 2010 11:57:14 +0200