@@ -1,30 +1,35 @@
 #!/usr/bin/make -f
 
-PYVERS=$(shell pyversions -sv) $(shell py3versions -sv)
+PY2VERS=$(shell pyversions -rv)
+PY3VERS=$(shell py3versions -rv)
 
-pkgdir = $(CURDIR)/debian/python$(if $(patsubst 3.%,,$(1)),,3)-restauth
+PY2DIR = $(CURDIR)/debian/python-restauth
+PY3DIR = $(CURDIR)/debian/python3-restauth
 
 %:
 	dh $@ --with python3,python2
 
 override_dh_installchangelogs:
+	dh_testdir
 	dh_installchangelogs ChangeLog
 
-install-python%:
+install-python2%:
 	dh_testdir
-	python$* setup.py install --force --root $(call pkgdir,$*) --no-compile -O0 --install-layout=deb
+	python2$* setup.py install --force --root ${PY2DIR} --no-compile -O0 --install-layout=deb
+
+install-python3%:
+	dh_testdir
+	python3$* setup.py install --force --root ${PY3DIR} --no-compile -O0 --install-layout=deb
 
 build-python%:
 	dh_testdir
 	python$* setup.py build
 
-override_dh_auto_build: ${PYVERS:%=build-python%}
+override_dh_auto_build: ${PY2VERS:%=build-python%} ${PY3VERS:%=build-python%}
 	dh_testdir
 	python setup.py build_doc
-	rm doc/_build/html/_static/underscore.js
-	rm doc/_build/html/_static/jquery.js
+	dh_auto_build
 
-	#dh_auto_build
-
-override_dh_auto_install: ${PYVERS:%=install-python%}
-	#dh_auto_install
+override_dh_auto_install:  ${PY2VERS:%=install-python%} ${PY3VERS:%=install-python%}
+	dh_testdir
+	dh_auto_install
